fix: RightPanel alignment issues

--- a/frontend/src/styles/RightPanel/search.css
+++ b/frontend/src/styles/RightPanel/search.css
@@ -2,15 +2,18 @@
 
 #search-container {
     position: relative;
-    width: fit-content;
+    width: 100%;
 }
 
 #search-input {
+    width: 100%;
     padding: 5px 10px 5px 30px; /* extra left padding for icon */
+    box-sizing: border-box;
     border-radius: 8px;
     border: 1px solid transparent; /* hide border */
     background-color: var(--medium-blue);
     color: var(--light-blue);
+    height: 45px;
 }
 
 .search-icon {
@@ -41,3 +44,9 @@
 #search-container:focus-within .search-icon {
     color: var(--accent);
 }
+
+/* 
+TODO:
+suggested-container + content and searchbar
+should be the same width and alignment
+*/
