--- a/frontend/src/styles/shared/icons.css
+++ b/frontend/src/styles/shared/icons.css
@@ -1,5 +1,6 @@
 /* frontend/src/styles/shared/icons.css */
 
-.icon {
+.sm-icon {
+    width: 42px;
     border-radius: 50%;
 }
